feat: add private local camera preview